--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "symfony/twig-bundle": "^5.2",
         "symfony/validator": "*",
         "symfony/web-link": "*",
+        "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
